[project]
name = "dice-roller"
version = "0.1.0"
description = "A Python package for rolling dice in various formats."
authors = [
    {name = "Diego Caceres",email = "diegocaceresgalvan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dice_roller", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
